Fixed service item overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ header nav ul {
 }
 
 header nav ul li {
-    display: inline-block;
+    display: inline;
     margin-left: 25px;
 }
 
@@ -45,16 +45,16 @@ header nav ul li a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/* end header syles */
 
 .hero {
-
-    height: 800px;
-    width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+    position: relative;
+    height: 600px;
+    width: 100%;
 }
 
 .float-left {
@@ -66,45 +66,31 @@ header nav ul li a {
     float: right;
     margin-left: 25px;
 }
+/* Main section */
+/* "main" will contain two content blocks: services and benefits  */
+.main {
+    margin: 0;
+    padding: 0;
+    /* display: inline-block; */
+    
+}
 
-.service p {
-    font-size: 12px;
-}
-.content {
-    display: inline-block;
-    width: 75%;
-    margin-left:10px;
-    /* margin-right:px; */
-} 
 .services {     
-    margin-left: 0px;
-    margin-right: 10px;
-}
-.service {
     display: inline-block;
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    width: 100%; 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-.service img {
-    max-height: 200px;
-}
-.service h2{
-    margin-bottom: 10px;
-    font-size: 2em;
+    /* position: relative; */
+    max-width: 75%;
+    margin-right: 0;
+    margin-left: 10px;
 }
 
 .benefits {
-    /* display: inline-block; */
     margin-right: 10px;
-    margin-left: 10px;
+    /* position: relative; */
+    /* position: absolute; */
+    margin-left: 0;
     padding: 20px;
     max-width: 20%;
-    /* width: 20%; */
+    text-align: center;
     clear: both;
     float: right;
     height: 100%;
@@ -114,11 +100,38 @@ header nav ul li a {
 
 
 
+.service {
+    display: block;
+    /* display:inline; */
+    /* margin-bottom: 20px; */
+    /* position: relative; */
+    padding: 50px;
+    min-height: 300px;
+    /* max-width: 100%; */
+    margin: 0 0 20px 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    background-position: center;
+    color: #ffffff;
+}
+
+.service img {
+    height: 200px;
+}
+.service h2{
+    margin-bottom: 10px;
+    font-size: 2em;
+}
+.service p {
+    font-size: 1em;
+}
+
 .benefit {
+
     margin-bottom: 32px;
     color: white;
-    text-align: center;
-
+    /* text-align: center; */
+    
     /* text-align: center; */
 }
 .benefit h3 {
